cabal-version:      >= 1.10
name:               ba
version:            0.1.0.0
synopsis:           A short description of your project
description:        A long description of your project
category:           Development
author:             
maintainer:         
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

-- Dependencies
executable ba
  main-is:           Main.hs
  hs-source-dirs:    src
  exposed-modules:
    Types
    SampleData
  build-depends:
    base >= 4.7 && < 5,
    text,
    containers,
    filepath,
    aeson,
    bytestring,
    directory
  default-language:   Haskell2010
